# EoverPAnalysis

./: .gitignore  CMakeLists.txt  README.md  UpperCMakeLists.txt
EoverPAnalysis/: EnergySumHelper.h  TrackExtrapolationIsolationTool.h
Plotting/: CreatePlots.py  README.md  fit_ep_histograms.py  make_root_files.sh  setup_condor.sh
Plotting/eop_plotting/: histogram_filling.py  plotting_tools.py  reweightings.py  selections.py  variables.py
Plotting/macros/: fill_script.py  prepare_submission.py
Plotting/utils/: utils.py
Root/: EoverPTreeAlgo.cxx  SecondariesTrees.cxx  TrackEnergyDecorator.cxx  TrackExtrapolationIsolationTool.cxx  TrackSorter.cxx
data/: data17_13TeV.periodN_DetStatus-v105-pro22-13_Unknown_PHYS_StandardGRL_All_Good_25ns_ignore_GLOBAL_LOWMU.xml  data18_13TeV.periodAllYear_DetStatus-v105-pro22-13_Unknown_PHYS_StandardGRL_All_Good_25ns_Triggerno17e33prim_ignore_GLOBAL_LOWMU.xml
scripts/: xAH_EoverP.py
